# vpp

./: README.md
INGRESS_VXLAN_NAT_IPSEC_FRAGMENT_EGRESS/: CLAUDE.md  DESIGN_VALIDATION.md  GEMINI.md  README.md  comprehensive-validation.sh  config.json  docker-compose-simple.yml  docker-compose.yml  file_permission.sh  generate_yamls.py  project-summary.md  test-chain.sh  verify-setup.sh
INGRESS_VXLAN_NAT_IPSEC_FRAGMENT_EGRESS/docs/: README.md  architecture.md  testing_guide.md  troubleshooting.md
INGRESS_VXLAN_NAT_IPSEC_FRAGMENT_EGRESS/scripts/: cleanup-all.sh  monitor-performance.sh  quick-debug.sh
INGRESS_VXLAN_NAT_IPSEC_FRAGMENT_EGRESS/src/: main.py
INGRESS_VXLAN_NAT_IPSEC_FRAGMENT_EGRESS/src/configs/: fragment-config.sh  gcp-config.sh  ingress-config.sh  ipsec-config.sh  nat-config.sh  start-vpp.sh  startup.conf  vxlan-config.sh
INGRESS_VXLAN_NAT_IPSEC_FRAGMENT_EGRESS/src/containers/: Dockerfile.base
INGRESS_VXLAN_NAT_IPSEC_FRAGMENT_EGRESS/src/utils/: __init__.py  container_manager.py  logger.py  network_manager.py  traffic_generator.py
INGRESS_VXLAN_NAT_IPSEC_FRAGMENT_EGRESS/tests/: test_container_manager.py  test_integration.py
NetLab/: Dockerfile  cleanup.sh  readme.md  run_lab.sh  vpp-hps-startup.conf  vpp-tor-startup.conf
NetLab/lib/: common.sh  phase1_setup.sh  phase2_tor_config.sh  phase3_hps_config.sh  phase4_validation.sh
bvi_irb/: Dockerfile  cleanup.sh  readme.md  run_vpp_irb_lab.sh  startup.conf
kea-blaster-lab/: .gitignore  CMakeLists.txt  Kea_AP_Tester.sh  Readme.md  build.sh  kea.sh  report.json  report.pcap  run-lab.sh  run-test.sh  verify.sh
kea-blaster-lab/lab/: Dockerfile  entrypoint.sh  radvd.conf  reset_lab.sh  setup_network.sh
kea-blaster-lab/lab/config/blaster/: 10_sessions_dhcpv4.json  1_session_dhcpv4.json  500_sessions_dhcpv4.json  dualstack.json  high_rate_dual_stack.json  single_session_dhcpv4.json
kea-blaster-lab/lab/config/kea/: kea-ctrl-agent.conf  kea-dhcp4.conf  kea-dhcp6.conf
kea-blaster-lab/src/: CMakeLists.txt
kea-blaster-lab/src/api/: cache_cmds.c  class_cmds.c  config_cmds.c  generic_cmds.c  host_cmds.c  lease_cmds.c  stat_cmds.c  subnet_cmds.c
kea-blaster-lab/src/cli/: keactrl.c  output.c  output.h
kea-blaster-lab/src/core/: keactrl_core.c
kea-blaster-lab/src/include/: keactrl.h
kea-blaster-lab/src/internal/: kea_config_builder.h  keactrl_internal.h
kea-blaster-lab/src/utils/: kea_config_builder.c
kea-blaster-lab/tests/: CMakeLists.txt  runner.c  test_main.h
kea-blaster-lab/tests/cases/: test_blaster.c  test_config_cmds.c  test_generic_cmds.c  test_lease_cmds.c  test_stat_cmds.c  test_subnet_cmds.c
kea-blaster-lab/tests/helpers/: bngblaster_api.c  bngblaster_api.h  config_helper.c  config_helper.h
kea-ctrl-test/: CMakeLists.txt  Dockerfile  build.sh  entrypoint.sh  kea-shell  start-and-validate.sh
kea-ctrl-test/cjson/: CMakeLists.txt
kea-ctrl-test/cli/: keactl.c  output.c  output.h
kea-ctrl-test/kea_config/: kea-ctrl-agent.conf  kea-dhcp4.conf  kea-dhcp6.conf
kea-ctrl-test/lib/: libkeactrl.c  libkeactrl.h  libkeactrl_config.c  libkeactrl_core.c  libkeactrl_generic.c  libkeactrl_internal.h  libkeactrl_lease4.c  libkeactrl_lease6.c  libkeactrl_stats_ha.c
kea-ctrl-test/tests/: runner.c  test_config_cmds.c  test_generic_cmds.c  test_lease_cmds.c  test_main.h  test_stats_ha_cmds.c
kea-frr-vpp/: Dockerfile  docker-compose.yml  entrypoint.py
kea-frr-vpp/config/bngblaster/: bngblaster.json
kea-frr-vpp/config/frr/: daemons
kea-frr-vpp/config/vpp/: startup.conf
kea-frr-vpp/frr_configs/: bng.conf  r1.conf  r2.conf
kea-frr-vpp/kea_configs/bng/: kea-dhcp4.conf  kea-dhcp6.conf
kea-frr-vpp/kea_configs/r1/: kea-dhcp4.conf  kea-dhcp6.conf
kea-frr-vpp/kea_configs/r2/: kea-dhcp4.conf  kea-dhcp6.conf
kea-frr-vpp/scripts/: get-vpp.sh
kea-frr-vpp/vpp_configs/: bng.vpp  r1.vpp  r2.vpp
stork/: deploy-stork-and-grafana.sh  install-docker.sh
vpp-bng-lab/: docker-compose.yaml  test-bng.sh
vpp-bng-lab/bng-node/: Dockerfile  vpp_startup.sh
vpp-bng-lab/bng-node/config/: kea-dhcp4.conf  kea-dhcp6.conf  (+1 more)
vpp-bng-lab/subscriber-node/: Dockerfile
vpp-ipsec-udp-test/: Dockerfile  README.md  aws-config.sh  aws-startup.conf  cleanup.sh  debug.sh  gcp-config.sh  gcp-startup.conf  run_vpp_test.sh  send_flows.py  setup.sh  setup_huge.sh  test.sh
vpp-ipsec-udp-vxlan/: Dockerfile  README.md  aws-config.sh  aws-startup.conf  cleanup.sh  debug.sh  gcp-config.sh  gcp-startup.conf  install-docker.sh  log.txt  output.txt  run_vpp_test.sh  send_flows.py  setup.sh  setup_huge.sh  test_fragmentation.py
vpp-ubuntu-veth-test/: Readme.md  docker-compose.yaml  prep_env.sh  test_connectivity.sh
vpp-ubuntu-veth-test/ubuntu-container/: Dockerfile
vpp-ubuntu-veth-test/vpp-container/: Dockerfile  startup.conf  vpp_startup.sh
vpp_chain/: CLAUDE.md  DEPLOYMENT_GUIDE.md  L2-L3-ARCHITECTURE-FIX.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_MIGRATION_GUIDE.md  PRODUCTION_VALIDATION_REPORT.md  QUICK_START.md  README.md  VPP_CHAIN_MANUAL_TEST_GUIDE.md  VPP_PRODUCTION_DEPLOYMENT_GUIDE.md  aws-gke-production-deployment.md  aws_production_custom.json  config-aws-gke-production.json  config-production.json  config.json  config_aws_production_ready.json  config_gcp_production_ready.json  configure_multicloud_deployment.py  cross_cloud_diagnostics.py  deploy_aws_multicloud.sh  deploy_gcp_multicloud.sh  df-bit-handling-guide.md  production-migration-guide.md  production.json  quick-start.sh  run.sh  setup-environment.sh  setup_vxlan_redirect.sh  test_single_vxlan.py  validation.sh
vpp_chain/docs/: PRODUCTION_MIGRATION_GUIDE.md  README.md  architecture.md  automation_templates.md  cross_cloud_connectivity.md  deployment.md  detailed_connectivity_diagram.md  manual_test_guide.md  production_deployment_guide.md  technical_reference.md  testing_guide.md  troubleshooting.md  troubleshooting_production.md
vpp_chain/plan/: Refined-AWS-to-GCP-Traffic-Mirroring-Guide.markdown
vpp_chain/src/: main.py
vpp_chain/tests/: __init__.py  test_container_manager.py  test_integration.py
vpp_chain/tools/: README.md
(+69 files in other folders)
